--- a/src/containers/contact/styles.scss
+++ b/src/containers/contact/styles.scss
@@ -1,120 +1,77 @@
-.contact{
-    &__content{
-        padding: 20px;
+.contact {
+  &__content {
+    padding: 20px;
 
-        &__header-text{
-            color: var(--yellow-theme-sub-text-color);
-            display: inline-block;
-            font-size: 22px;
-            font-weight: 600;
-            line-height: 1em;
-            letter-spacing: 0.5px;
-            position: relative;
-            text-transform: uppercase;
-            padding: 5px 10px;
-            border-bottom: 2px solid var(--yellow-theme-main-color);
-        }
+    &__header-text {
+      color: var(--yellow-theme-sub-text-color);
+      display: inline-block;
+      font-size: 22px;
+      font-weight: 600;
+      line-height: 1em;
+      letter-spacing: 0.5px;
+      position: relative;
+      text-transform: uppercase;
+      padding: 5px 10px;
+      border-bottom: 2px solid var(--yellow-theme-main-color);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-bottom: 1px dotted var(--yellow-theme-main-color);
+      /* Add this line for the dotted line */
+      padding-bottom: 10px;
+      /* Add padding to separate the line from the text */
 
-        &__header-text::before,
-        &__header-text::after{
-            position: absolute;
-            content: "";
-            width: 2px;
-            height: 5px;
-            background-color: var(--yellow-theme-main-color);
-            bottom: -1px;
-        }
-        &__header-text::before{
-            left: 0;
-        }
-        &__header-text::after{
-            right: 0;
-        }
+      &::before,
+      &::after {
+        position: absolute;
+        content: "";
+        width: 2px;
+        height: 5px;
+        background-color: var(--yellow-theme-main-color);
+        bottom: -1px;
+      }
 
-        &__form{
-            margin-top: 30px;
+      &::before {
+        left: 0;
+      }
 
-            &__controlswrapper{
-                  display: grid;
-                  grid-template-columns: repeat(2,1fr);
-                  gap: 40px;
-                  margin-bottom: 30px;
-
-                  div{
-                    position: relative;
-                    .inputName,
-                    .inputEmail,
-                    .inputDescription{
-                        width: 100%;
-                        border: 2px solid var(--yellow-theme-main-color);
-                        padding: 16px 12px;
-                        transition: all 0.5s ease;
-                        position: relative;
-                        background-color: transparent;
-                        color: var(--yellow-theme-sub-text-color);
-                    }
-
-                    .nameLabel,
-                    .emailLabel,
-                    .descriptionLabel{
-                        font-weight: 500;
-                        position: absolute;
-                        top: 7px;
-                        left: 12px;
-                        transition: all 0.2s ease;
-                        color: var(--yellow-theme-sub-text-color);
-                        font-size: 16px;
-                    }
-
-                    .inputName:focus,
-                    .inputEmail:focus,
-                    .inputDescription:focus{
-                        outline: none;
-                    }
-
-                    .inputName:focus + .nameLabel,
-                    .inputName:valid + .nameLabel,
-                    .inputEmail:focus+.emailLabel,
-                    .inputEmail:valid+.emailLabel,
-                    .inputDescription:focus + .descriptionLabel,
-                    .inputDescription:valid + .descriptionLabel
-                    {
-                        font-size: 18px;
-                        top: -25px;
-                        left: 0px;
-                    }
-
-
-                   
-                  }
-            }
-        }
-
-        button{
-            cursor: pointer;
-            padding: 10px 70px;
-            font-size: 2rem;
-            background: transparent;
-            color: var(--yellow-theme-main-color);
-            border: 1.5px solid var(--yellow-theme-main-color);
-            border-radius: 4px;
-            font-weight: 500;
-
-            &:hover{
-                color: #000;
-                background: var(--yellow-theme-main-color);
-            }
-        }
+      &::after {
+        right: 0;
+      }
     }
-}
 
+    &__info {
+      margin-top: 20px;
 
-@media only screen and (max-width : 768px){
-    .contact__content__form{
-        text-align: center;
+      &__item {
+        margin-bottom: 10px;
+        font-size: 18px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white; // Set text color to white
+        text-decoration: None; // Underline the text
 
-        &__controlswrapper{
-            grid-template-columns: repeat(1,1fr);
+        strong {
+          font-weight: 1000;
+          color: var(--yellow-theme-main-color); // Blue color for side headings
+          font-size: large;
         }
+
+        a {
+          color: white;
+          text-decoration: None;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+
+        // Set white color for other text content
+        &:not(strong) {
+          color: #fff;
+        }
+      }
     }
+  }
 }
