--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -6,7 +6,8 @@
     align-items: center;
     font-size: 1.2rem;
     position: sticky;
-
+    z-index: 999999;
+    
     &__container {
         display: flex;
         align-items: center;
@@ -85,6 +86,7 @@
                 margin: 0px;
                 padding: 20px 0px;
                 width: 100%; // Add width: 100%;
+                
             }
         }
 
